# AgentSAST

./: .gitignore  404.html  architecture.html  data-models.html  deployment.html  index.html  layer1-flawfinder.html  layer1-models.html  layer1-scanner.html  layer1-semgrep.html  layer1.html  layer2-models.html  layer2-parser.html  layer2-slicer.html  layer2.html  layer3-judge.html  layer3-models.html  layer3-prompt.html  layer3.html  pipeline.html  print.html  pyproject.toml  quick-start.html  roadmap.html  searchindex.js  searchindex.json
.github/workflows/: book.yml
book/: book.toml
book/src/: SUMMARY.md  architecture.md  data-models.md  deployment.md  introduction.md  layer1-flawfinder.md  layer1-models.md  layer1-scanner.md  layer1-semgrep.md  layer1.md  layer2-models.md  layer2-parser.md  layer2-slicer.md  layer2.md  layer3-judge.md  layer3-models.md  layer3-prompt.md  layer3.md  pipeline.md  quick-start.md  roadmap.md
docs/: ARCHITECTURE.md  gemini-answer.md  google-researh.html
samples/: safe_server.c  vulnerable_server.c
src/agentsast/: cli.py
tests/: test_cli.py  test_pipeline.py
tests/fixtures/: cppcheck_buffer.xml  csa_null_deref.sarif  infer_null_deref.sarif
tests/layer1/: test_compile.py  test_cppcheck_scanner.py  test_csa_scanner.py  test_e2e_sarif.py  test_handlers_cppcheck.py  test_handlers_csa.py  test_handlers_infer.py  test_infer_scanner.py  test_models.py  test_sarif_parser.py  test_scanner_registry.py
tests/layer2/: test_agent_backend.py  test_backend.py  test_mcp_lsp_backend.py  test_slicer_backend.py  test_treesitter_backend.py
(+31 files in other folders)
