[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentsast"
version = "0.2.0"
description = "AI-Augmented Static Analysis Tool for C/C++ — SAST anchoring + program slicing + LLM judgment"
requires-python = ">=3.10"
dependencies = [
    "tree-sitter>=0.22",
    "tree-sitter-c>=0.23",
    "tree-sitter-cpp>=0.23",
    "openai>=1.30",
    "rich>=13.0",
    "click>=8.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]
layer2-mcp = [
    "mcp>=1.2",
]

[project.scripts]
agentsast = "agentsast.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
